--- a/app/src/declaration/view/info.html
+++ b/app/src/declaration/view/info.html
@@ -38,7 +38,7 @@
                                                 <a class="member" ng-click="vm.openMemberInfo(member)">CPR</a>
                                             </div>
                                             <div flex="15" class="od-secondary">
-                                                {{case.cprNumber}}
+                                                {{case.cpr}}
                                             </div>
                                         </div>
                                     </md-list-item>
