--- a/app/src/declaration/view/create.html
+++ b/app/src/declaration/view/create.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="{{'COMMON.NEW' | translate}} {{'COMMON.FOLDER' | translate | lowercase}}" >
-    <form name="createDeclaration" ng-submit="submit(firstName, lastName, address, postbox,city,ethnicity, motherEthnicity, fatherEthnicity, referingAgency,mainCharge,placement,sanctionProposal,verdictDate,petitionDate,creationDate,observationDate,declarationDate,endedWithoutDeclaration,declaration,sentTo,forensicDoctorCouncil,forensicDoctorCouncilText,finalVerdict,verdict,remarks,consent,doctor1,doctor2,psychologist,socialWorker,secretary,mainDiagnosis,biDiagnoses);">
+    <form name="createDeclaration" ng-submit="submit(cpr, firstName, lastName, address, postbox,city,ethnicity, motherEthnicity, fatherEthnicity, referingAgency,mainCharge,placement,sanctionProposal,verdictDate,petitionDate,creationDate,observationDate,declarationDate,endedWithoutDeclaration,declaration,sentTo,forensicDoctorCouncil,forensicDoctorCouncilText,finalVerdict,verdict,remarks,consent,doctor1,doctor2,psychologist,socialWorker,secretary,mainDiagnosis,biDiagnoses);">
 
         <div class="od-create-declarations">
         <div layout-gt-sm="row">
