frontend design for cards and tabs

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -71,7 +71,7 @@ a {
 }
 
 body {
-  background: $gray-85;
+  //background: $gray-85;
   color: $primary-text-color;
 }
 
@@ -109,26 +109,26 @@ dl {
 }
 
 .od-body {
-  margin: $u * 3 0 auto;
+  margin: $u * 8 0 auto;
 }
 
 // Title that is placed in the header
 .od-title {
   color: $headline-color;
-  font-size: $u * 1.5;
-  font-weight: normal;
-  left: $u * 3;
-  line-height: 1;
-  right: $u * 6;
-  position: fixed;
-  width: 30%;
-  top: 0;
+  // font-size: $u * 1.5;
+  // font-weight: normal;
+  left: 0;
+  // line-height: 1;
   margin: 0;
-  padding: $u * .75 $u;
-  z-index: 1;
   overflow: hidden;
+  // right: $u * 6;
+  // padding: $u * .75 $u;
+  position: fixed;
+  // width: 30%;
+  top: 0;
   white-space: nowrap;
   text-overflow: ellipsis;
+  z-index: 1;
 }
 
 // Simple button class can be added to <a> or <button> elements
