--- a/app/src/header/view/header.html
+++ b/app/src/header/view/header.html
@@ -1,4 +1,4 @@
-<div>
+<!--<div>
 
     <od-menu></od-menu>
 
@@ -12,4 +12,33 @@
 
     <od-chat></od-chat>
 
-</div>
+</div>-->
+
+<md-toolbar class="md-tall">
+    <!--<od-menu></od-menu>-->
+
+    <od-searchbar></od-searchbar>
+
+    <od-settings></od-settings>
+
+    <od-user></od-user>
+
+    <!--<od-notifications></od-notifications>-->
+
+    <span flex></span>
+    <span class="md-toolbar-tools" layout="row">
+        
+        <md-button class="md-icon-button" aria-label="Back">
+            <md-icon>arrow_back</md-icon>
+        </md-button>
+
+        <h2>Johnny Madsen (060775-3421)</h2>
+        <span flex></span>
+        <!--<md-button class="md-text-icon-button" aria-label="edit">
+            <md-icon>edit</md-icon> rediger
+        </md-button>-->
+        <md-button class="md-text-icon-button" aria-label="edit">
+            <md-icon>file_upload</md-icon> Nyt dokument
+        </md-button>
+    </span>
+</md-toolbar>
