--- a/app/src/sites/sites.scss
+++ b/app/src/sites/sites.scss
@@ -66,12 +66,12 @@ md-list {
   letter-spacing: .04em;
 }
 
-.od-title {
-  font-size: 22px;
-  letter-spacing: .02em;
-  padding-top: 14px;
-  right: 145px;
-}
+// .od-title {
+//   font-size: 22px;
+//   letter-spacing: .02em;
+//   padding-top: 14px;
+//   right: 145px;
+// }
 
 .sortHead {
   padding-top: 0;
