--- a/app/src/declaration/view/info.html
+++ b/app/src/declaration/view/info.html
@@ -1,37 +1,53 @@
-<h1 class="od-title">
-    <span class="od-back-btn" ui-sref="projects"><i class="material-icons">arrow_back</i> {{'COMMON.BACK' | translate}}</span>
-    <!--<span ng-if="vm.project.type == vm.strings.templateProject">{{'COMMON.TEMPLATEPROJECT' | translate}} :</span>-->
-</h1>
-
-<div class="od-info-declarations">
-    <div layout-gt-sm="row">
 
 
-            <md-card flex-gt-sm="100">
-                <md-card-content>
-                    <md-tabs md-selected="tab.selected" md-dynamic-height md-border-bottom flex-gt-sm="vm.project.type != vm.strings.templateProject ? 75 : 100">
-                        <md-tab ui-sref="filebrowser">
+    <h2 class="od-title">
+        <span class="md-toolbar-tools">
+    Retspsykiatriske erklæringer
+        </span>
+    </h2>
 
-                            <md-tab-label>
-                                <i class="material-icons icon-small">library_books</i> stamdata
-                            </md-tab-label>
+<div layout="row">
+<md-sidenav class="md-sidenav-left" style="background-color:transparent" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+        <md-button class="md-text-icon-button" aria-label="edit">
+            <md-icon>content_paste</md-icon> Patient data
+        </md-button>
+        <md-button class="md-text-icon-button" aria-label="edit">
+            <md-icon>library_books</md-icon> Dokumenter
+        </md-button>
+</md-sidenav>
 
+<div class="od-info-declarations" flex>
+    <ng-include src="'app/src/declaration/view/documents.html'"></ng-include>
 
-                            <md-tab-body>
+    <!--<ng-include src="'app/src/declaration/view/info-cards.html'"></ng-include>-->
 
+    <!--<ng-include src="'app/src/declaration/view/info-tabs.html'"></ng-include>-->
 
+</div>
+</div>
 
-                                <form id="casenumber" autocomplete="off" ng-submit="getCase(number)">
-                                    <md-input-container>
-                                        <label>Sagsnummer</label>
-                                        <input id="username" name="username" type="text" ng-model="number" autofocus />
-                                    </md-input-container>
-                                </form>
+    <!--
+    <div layout="row" layout-wrap>
 
-                                <md-card-content>
+        <md-card flex-gt-sm="100">
+            <md-card-content>
+                <md-tabs md-selected="tab.selected" md-dynamic-height md-border-bottom flex-gt-sm="vm.project.type != vm.strings.templateProject ? 75 : 100">
+                    <md-tab ui-sref="filebrowser">
+
+                        <md-tab-label>
+                            <i class="material-icons icon-small">library_books</i> stamdata
+                        </md-tab-label>
+
+                        <md-tab-body>
+                            <form id="casenumber" autocomplete="off" ng-submit="getCase(number)">
+                                <md-input-container>
+                                    <label>Sagsnummer</label>
+                                    <input id="username" name="username" type="text" ng-model="number" autofocus />
+                                </md-input-container>
+                            </form>
+
+                            <md-card-content>
                                 <md-list>
-
-
                                     <md-list-item>
                                         <div class="md-no-style md-list-item-inner">
                                             <div flex="10">
@@ -99,7 +115,7 @@
                                     </md-list-item>
 
                                     <md-list-item>
-                                </md-list-item>
+                                    </md-list-item>
 
                                     <md-list-item>
                                         <div class="md-no-style md-list-item-inner">
@@ -204,93 +220,58 @@
                                         </div>
                                     </md-list-item>
 
-                             </md-list>
-                                </md-card-content>
+                                </md-list>
+                            </md-card-content>
+                        </md-tab-body>
+                    </md-tab>
+                    <md-tab ui-sref="project.discussions">
+                        <md-tab-label>
+                            <i class="material-icons icon-small">chat_bubble_outline</i> Historik
+                        </md-tab-label>
+                        <md-tab-body>
+                            <md-card-content>
+                                <md-list>
+                                    <ng-include src="'app/src/declaration/view/history.html'"></ng-include>
+                                </md-list>
+                            </md-card-content>
+                        </md-tab-body>
+                    </md-tab>
 
+                    <md-tab ui-sref="project.discussions">
+                        <md-tab-label>
+                            <i class="material-icons icon-small">chat_bubble_outline</i> Erklæring afgivet af
+                        </md-tab-label>
+                        <md-tab-body>
+                            <md-card-content>
+                                <md-list>
 
+                                    <ng-include src="'app/src/declaration/view/declaration.html'"></ng-include>
+                            </md-card-content>
+                        </md-tab-body>
+                    </md-tab>
 
+                    <md-tab ui-sref="project.discussions">
+                        <md-tab-label>
+                            <i class="material-icons icon-small">chat_bubble_outline</i> ICD-10 diagnose
+                        </md-tab-label>
+                        <md-tab-body>
+                            <md-card-content>
+                                <md-list>
+                                    <ng-include src="'app/src/declaration/view/icd-10.html'"></ng-include>
+                                </md-list>
+                            </md-card-content>
+                        </md-tab-body>
+                    </md-tab>
+                </md-tabs>
 
-
-
-
-                            </md-tab-body>
-                        </md-tab>
-
-                        <md-tab ui-sref="project.discussions">
-                            <md-tab-label>
-                                <i class="material-icons icon-small">chat_bubble_outline</i> Historik
-                            </md-tab-label>
-                            <md-tab-body>
-                                <md-card-content>
-                                    <md-list>
-                                        <ng-include src="'app/src/declaration/view/history.html'"></ng-include>
-                                    </md-list>
-                                </md-card-content>
-                            </md-tab-body>
-                        </md-tab>
-
-
-
-
-                        <md-tab ui-sref="project.discussions">
-                            <md-tab-label>
-                                <i class="material-icons icon-small">chat_bubble_outline</i> Erklæring afgivet af
-                            </md-tab-label>
-                            <md-tab-body>
-                                <md-card-content>
-                                    <md-list>
-
-                                        <ng-include src="'app/src/declaration/view/declaration.html'"></ng-include>
-                                </md-card-content>
-                            </md-tab-body>
-                        </md-tab>
-
-
-
-                        <md-tab ui-sref="project.discussions">
-                            <md-tab-label>
-                                <i class="material-icons icon-small">chat_bubble_outline</i> ICD-10 diagnose
-                            </md-tab-label>
-                            <md-tab-body>
-                                <md-card-content>
-                                    <md-list>
-                                            <ng-include src="'app/src/declaration/view/icd-10.html'"></ng-include>
-                                    </md-list>
-                                </md-card-content>
-                            </md-tab-body>
-                        </md-tab>
-
-
-
-
-
-
-
-
-
-
-                    </md-tabs>
-
-                    <md-card-actions   ng-controller="DeclarationCreateController as sc" layout="row" layout-align="start center" class="btnAlign">
-                        <md-button ng-click="sc.openDeclarationCreateDialog($event)" class="md-primary" aria-label="{{'COMMON.CREATE_NEW' | translate}} {{'PROJECT.GROUPROOM' | translate | lowercase}}">
-                            <i class="material-icons">add</i>
-                            <span>OPRET ERKLÆRING</span>
-                        </md-button>
-
-
-                    </md-card-actions>
-
-
-
-
-                </md-card-content>
-
-
-
-            </md-card>
-
-
-
-
+                <md-card-actions ng-controller="DeclarationCreateController as sc" layout="row" layout-align="start center" class="btnAlign">
+                    <md-button ng-click="sc.openDeclarationCreateDialog($event)" class="md-primary" aria-label="{{'COMMON.CREATE_NEW' | translate}} {{'PROJECT.GROUPROOM' | translate | lowercase}}">
+                        <i class="material-icons">add</i>
+                        <span>OPRET ERKLÆRING</span>
+                    </md-button>
+                </md-card-actions>
+            </md-card-content>
+        </md-card>
     </div>
-</div>
+    
+</div>-->
