--- a/app/src/header/view/header.html
+++ b/app/src/header/view/header.html
@@ -1,21 +1,4 @@
-<!--<div>
-
-    <od-menu></od-menu>
-
-    <od-searchbar></od-searchbar>
-
-    <od-settings></od-settings>
-
-    <od-user></od-user>
-
-    <od-notifications></od-notifications>
-
-    <od-chat></od-chat>
-
-</div>-->
-
 <md-toolbar class="md-tall">
-    <!--<od-menu></od-menu>-->
 
     <od-searchbar></od-searchbar>
 
@@ -23,9 +6,7 @@
 
     <od-user></od-user>
 
-    <!--<od-notifications></od-notifications>-->
-
-    <span flex></span>
+    <span class="md-toolbar-tools" flex><h2>Retspsykologiske erklæringer</h2></span>
     <span class="md-toolbar-tools" layout="row">
         
         <md-button class="md-icon-button" aria-label="Back">
@@ -34,11 +15,6 @@
 
         <h2>Johnny Madsen (060775-3421)</h2>
         <span flex></span>
-        <!--<md-button class="md-text-icon-button" aria-label="edit">
-            <md-icon>edit</md-icon> rediger
-        </md-button>-->
-        <md-button class="md-text-icon-button" aria-label="edit">
-            <md-icon>file_upload</md-icon> Nyt dokument
-        </md-button>
+        <div ui-view="toolbar-tools"></div>
     </span>
 </md-toolbar>
