--- a/app/src/declaration/view/documents.html
+++ b/app/src/declaration/view/documents.html
@@ -1,8 +1,33 @@
-<div layout="row" layout-wrap>
-    <md-card ng-repeat="i in [1,2,3,4,5,6,7,8,9,10]">
+<div layout="row" layout-wrap ng-show="!tableView">
+    <md-card ng-repeat="i in [1,2,3,4,5,6,7,8,9,10]" flex-gt-sm="15" flex='45'>
+        <md-checkbox class="document-checkbox" aria-label="Checkbox {{i}}" ng-click="editDocuments()"></md-checkbox>
         <img ng-src="https://placehold.it/190" class="md-card-image" alt="Washed Out">
         <md-card-content>
-            <span class="md-subhead">Some document title</span>
+            <span class="md-subhead">document title {{i}}</span>
         </md-card-content>
     </md-card>
 </div>
+
+<md-card ng-show="tableView">
+    <md-card-content>
+        <md-table-container>
+            <table md-table md-row-select multiple>
+                <thead md-head>
+                    <tr md-row>
+                        <th md-column>Name</th>
+                        <th md-column md-numeric>Date modified</th>
+                        <th md-column md-numeric>Modified by</th>
+                    </tr>
+                </thead>
+                <tbody md-body>
+                    <tr md-row md-select="dessert" md-select-id="name" md-auto-select ng-repeat="i in [1,2,3,4,5,6,7,8,9,10]">
+                        <td md-cell>document title {{i}}</td>
+                        <td md-cell>7. maj 2017</td>
+                        <td md-cell>Peter Jensen</td>
+
+                    </tr>
+                </tbody>
+            </table>
+        </md-table-container>
+    </md-card-content>
+</md-card>
