--- a/app/src/declaration/view/info.html
+++ b/app/src/declaration/view/info.html
@@ -1,277 +1,19 @@
-
-
-    <h2 class="od-title">
-        <span class="md-toolbar-tools">
-    Retspsykiatriske erklæringer
-        </span>
-    </h2>
-
 <div layout="row">
-<md-sidenav class="md-sidenav-left" style="background-color:transparent" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
-        <md-button class="md-text-icon-button" aria-label="edit">
+    <md-sidenav class="md-sidenav-left" style="background-color:transparent" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+        <md-button class="md-text-icon-button" aria-label="edit" ng-click="viewPatientData()">
             <md-icon>content_paste</md-icon> Patient data
         </md-button>
-        <md-button class="md-text-icon-button" aria-label="edit">
+        <md-button class="md-text-icon-button" aria-label="edit" ng-click="viewDocuments()">
             <md-icon>library_books</md-icon> Dokumenter
         </md-button>
-</md-sidenav>
+    </md-sidenav>
 
-<div class="od-info-declarations" flex>
-    <ng-include src="'app/src/declaration/view/documents.html'"></ng-include>
-
-    <!--<ng-include src="'app/src/declaration/view/info-cards.html'"></ng-include>-->
-
-    <!--<ng-include src="'app/src/declaration/view/info-tabs.html'"></ng-include>-->
-
-</div>
-</div>
-
-    <!--
-    <div layout="row" layout-wrap>
-
-        <md-card flex-gt-sm="100">
-            <md-card-content>
-                <md-tabs md-selected="tab.selected" md-dynamic-height md-border-bottom flex-gt-sm="vm.project.type != vm.strings.templateProject ? 75 : 100">
-                    <md-tab ui-sref="filebrowser">
-
-                        <md-tab-label>
-                            <i class="material-icons icon-small">library_books</i> stamdata
-                        </md-tab-label>
-
-                        <md-tab-body>
-                            <form id="casenumber" autocomplete="off" ng-submit="getCase(number)">
-                                <md-input-container>
-                                    <label>Sagsnummer</label>
-                                    <input id="username" name="username" type="text" ng-model="number" autofocus />
-                                </md-input-container>
-                            </form>
-
-                            <md-card-content>
-                                <md-list>
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">CPR</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-                                                {{case.cpr}}
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">Fornavn</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-                                                {{case.firstName}}
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">Efternavn</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-                                                {{case.lastName}}
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">Adresse</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-                                                {{case.address}}
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">Postnr.</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-                                                {{case.postbox}}
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">By</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-                                                {{case.city}}
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">Etnicitet</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-                                                {{case.ethnicity}}
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">Mors etnicitet</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-                                                {{case.motherEthnicity}}
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">Fars etnicitet</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-                                                {{case.fatherEthnicity}}
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">Henvisende Ins</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-                                                {{case.referingAgency}}
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-
-                                    <md-list-item>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">Hovedsigte</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-                                                {{case.mainCharge}}
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">Placering</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-                                                {{case.placement}}
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">Sanktionsfors</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-                                                {{case.sanctionProposal}}
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">Status</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-                                                {{case.status}}
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-                                    <md-list-item>
-                                        <div class="md-no-style md-list-item-inner">
-                                            <div flex="10">
-                                                <a class="member" ng-click="vm.openMemberInfo(member)">Afslut sag</a>
-                                            </div>
-                                            <div flex="15" class="od-secondary">
-
-                                            </div>
-                                        </div>
-                                    </md-list-item>
-
-                                </md-list>
-                            </md-card-content>
-                        </md-tab-body>
-                    </md-tab>
-                    <md-tab ui-sref="project.discussions">
-                        <md-tab-label>
-                            <i class="material-icons icon-small">chat_bubble_outline</i> Historik
-                        </md-tab-label>
-                        <md-tab-body>
-                            <md-card-content>
-                                <md-list>
-                                    <ng-include src="'app/src/declaration/view/history.html'"></ng-include>
-                                </md-list>
-                            </md-card-content>
-                        </md-tab-body>
-                    </md-tab>
-
-                    <md-tab ui-sref="project.discussions">
-                        <md-tab-label>
-                            <i class="material-icons icon-small">chat_bubble_outline</i> Erklæring afgivet af
-                        </md-tab-label>
-                        <md-tab-body>
-                            <md-card-content>
-                                <md-list>
-
-                                    <ng-include src="'app/src/declaration/view/declaration.html'"></ng-include>
-                            </md-card-content>
-                        </md-tab-body>
-                    </md-tab>
-
-                    <md-tab ui-sref="project.discussions">
-                        <md-tab-label>
-                            <i class="material-icons icon-small">chat_bubble_outline</i> ICD-10 diagnose
-                        </md-tab-label>
-                        <md-tab-body>
-                            <md-card-content>
-                                <md-list>
-                                    <ng-include src="'app/src/declaration/view/icd-10.html'"></ng-include>
-                                </md-list>
-                            </md-card-content>
-                        </md-tab-body>
-                    </md-tab>
-                </md-tabs>
-
-                <md-card-actions ng-controller="DeclarationCreateController as sc" layout="row" layout-align="start center" class="btnAlign">
-                    <md-button ng-click="sc.openDeclarationCreateDialog($event)" class="md-primary" aria-label="{{'COMMON.CREATE_NEW' | translate}} {{'PROJECT.GROUPROOM' | translate | lowercase}}">
-                        <i class="material-icons">add</i>
-                        <span>OPRET ERKLÆRING</span>
-                    </md-button>
-                </md-card-actions>
-            </md-card-content>
-        </md-card>
+    <div class="od-info-declarations" flex>
+        <div ui-view='declarations'></div>
     </div>
-    
-</div>-->
+</div>
+
+<!--<md-button ng-click="openDeclarationCreateDialog($event)">
+    <md-icon>add</md-icon>
+    <span>OPRET ERKLÆRING</span>
+</md-button>-->
