added search bar

--- a/app/src/declaration/view/sections/basic-info.html
+++ b/app/src/declaration/view/sections/basic-info.html
@@ -5,10 +5,10 @@
         </md-card-title-text>
     </md-card-title>
     <md-card-content>
-        <md-input-container class="md-block">
+        <!--<md-input-container class="md-block">
             <label>Sagsnummer</label>
             <input ng-model="case.number" ng-disabled="!editPatientData">
-        </md-input-container>
+        </md-input-container>-->
         <md-input-container class="md-block">
             <label>CPR</label>
             <input ng-model="case.cprNumber" ng-disabled="!editPatientData">
