implemented creation and editing of cases

--- a/app/src/declaration/view/create-toolbar.html
+++ b/app/src/declaration/view/create-toolbar.html
@@ -1,5 +1,5 @@
 
-<md-button ng-click="submit('hello')">
+<md-button ng-click="submit()">
     <md-icon>add</md-icon>
     <span>Opret erklæring</span>
 </md-button>
