--- a/app/src/declaration/view/patient-info-toolbar.html
+++ b/app/src/declaration/view/patient-info-toolbar.html
@@ -2,6 +2,6 @@
     <md-icon>edit</md-icon> rediger
 </md-button>
 
-<md-button class="md-text-icon-button" aria-label="edit" ng-click="toggleEdit()" ng-show="editMode">
+<md-button class="md-text-icon-button" aria-label="edit" ng-click="saveEdit()" ng-show="editMode">
     <md-icon>save</md-icon> gem
 </md-button>
