fixed some routing, made all fields only editable in edit mode, fixed header label to show name and case id

--- a/app/src/declaration/view/patient-toolbar.html
+++ b/app/src/declaration/view/patient-toolbar.html
@@ -1,5 +1,5 @@
-<!--<md-button class="md-icon-button" aria-label="Back">
+<md-button class="md-icon-button" aria-label="Back" ng-click="back()">
     <md-icon>arrow_back</md-icon>
-</md-button>-->
+</md-button>
 
-<h2>Johnny Madsen (Sag nr. 5678)</h2>
+{{caseTitle}}
