--- a/app/src/declaration/view/sections/basic-info.html
+++ b/app/src/declaration/view/sections/basic-info.html
@@ -7,7 +7,7 @@
     <md-card-content>
         <!--<md-input-container class="md-block">
             <label>Sagsnummer</label>
-            <input ng-model="case.number" ng-disabled="!editPatientData">
+            <input ng-model="case.caseNumber" ng-disabled="!editPatientData">
         </md-input-container>-->
         <md-input-container class="md-block">
             <label>CPR</label>
