--- a/app/src/declaration/view/sections/referral.html
+++ b/app/src/declaration/view/sections/referral.html
@@ -7,19 +7,19 @@
     <md-card-content>
         <md-input-container class="md-block">
             <label>Henvisende instans</label>
-            <input ng-model="case.referingAgency">
+            <input ng-model="case.referingAgency" ng-disabled="!editPatientData">
         </md-input-container>
         <md-input-container class="md-block">
             <label>Hovedsigtelse</label>
-            <input ng-model="case.mainCharge">
+            <input ng-model="case.mainCharge" ng-disabled="!editPatientData">
         </md-input-container>
         <md-input-container class="md-block">
             <label>Placering</label>
-            <input ng-model="case.placement">
+            <input ng-model="case.placement" ng-disabled="!editPatientData">
         </md-input-container>
         <md-input-container class="md-block">
             <label>Sanktionsforslag</label>
-            <input ng-model="case.sanctionProposal">
+            <input ng-model="case.sanctionProposal" ng-disabled="!editPatientData">
         </md-input-container>
     </md-card-content>
 </md-card>
