--- a/app/src/declaration/view/document-toolbar.html
+++ b/app/src/declaration/view/document-toolbar.html
@@ -1,4 +1,4 @@
-<span style="border-right:1px solid white" ng-if="'declaration.documents.edit' | isState">
+<span style="border-right:1px solid white" ng-if="'declaration.show.documents.edit' | isState">
     <md-button class="md-icon-button" aria-label="edit">
         <md-icon>remove_red_eye</md-icon>
     </md-button>
