--- a/app/src/declaration/view/search.html
+++ b/app/src/declaration/view/search.html
@@ -1,13 +1,20 @@
 <div layout="row" layout-align="center center">
     <div layout="column" flex-gt-sm="50" flex>
         <div layout="row">
-            <md-autocomplete md-no-cache="ctrl.noCache" md-selected-item="ctrl.selectedItem" md-search-text-change="ctrl.searchTextChange(ctrl.searchText)"
-                md-search-text="ctrl.searchText" md-selected-item-change="ctrl.selectedItemChange(item)" md-items="item in ctrl.querySearch(ctrl.searchText)"
-                md-item-text="item.display" md-min-length="0" placeholder="Søg på et sagsnummer" flex>
+            <md-autocomplete
+                md-selected-item="ctrl.selectedItem"
+                md-search-text-change="ctrl.searchTextChange(ctrl.searchText)"
+                md-search-text="ctrl.searchText"
+                md-selected-item-change="ctrl.selectedItemChange(item)" 
+                md-items="item in ctrl.querySearch(ctrl.searchText)"
+                md-item-text="item.caseNumber" 
+                md-min-length="0" 
+                placeholder="Søg på et sagsnummer" flex>
                 <md-item-template>
-                    <span md-highlight-text="ctrl.searchText" md-highlight-flags="^i">{{item.display}}</span>
+                    <span md-highlight-text="ctrl.searchText" md-highlight-flags="^i">{{item.caseNumber}}</span>
                 </md-item-template>
             </md-autocomplete>
+
             <md-button class="md-icon-button">
             <md-icon>filter_list</md-icon>
             </md-button>
