--- a/app/src/declaration/view/document-toolbar.html
+++ b/app/src/declaration/view/document-toolbar.html
@@ -7,7 +7,7 @@
     </md-button>
 </span>
 
-<md-button class="md-text-icon-button" aria-label="edit">
+<md-button class="md-text-icon-button" aria-label="edit" ng-click="uploadDocumentsDialog()">
     <md-icon>file_upload</md-icon> Nyt dokument
 </md-button>
 
