--- a/app/src/declaration/view/info.html
+++ b/app/src/declaration/view/info.html
@@ -1,5 +1,5 @@
 <div layout="row">
-    <md-sidenav class="md-sidenav-left" style="background-color:transparent" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+    <md-sidenav class="md-sidenav-left sidenav-fixed" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
         <md-button class="md-text-icon-button" aria-label="edit" ng-click="viewPatientData()">
             <md-icon>content_paste</md-icon> Patient data
         </md-button>
