made search work and other minor changes

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -140,7 +140,7 @@ dl {
     border: none;
     display: inline-block;
     box-sizing: border-box;
-    background-color: $primary-color-dark;
+    //background-color: $primary-color-dark;
     color: $secondary-text-color;
     padding: $u * .5;
     min-width: $u * 3;
