--- a/app/src/declaration/view/search.html
+++ b/app/src/declaration/view/search.html
@@ -1,7 +1,7 @@
 <div layout="row" layout-align="center center">
     <div layout="column" flex-gt-sm="50" flex>
         <div layout="row">
-            <md-autocomplete
+            <!--<md-autocomplete
                 md-selected-item="ctrl.selectedItem"
                 md-search-text-change="ctrl.searchTextChange(ctrl.searchText)"
                 md-search-text="ctrl.searchText"
@@ -13,11 +13,21 @@
                 <md-item-template>
                     <span md-highlight-text="ctrl.searchText" md-highlight-flags="^i">{{item.caseNumber}}</span>
                 </md-item-template>
-            </md-autocomplete>
+            </md-autocomplete>-->
+            <md-input-container class="md-block" flex>
+                <label>Søg på et sagsnummer</label>
+                <input ng-model="caseid">
+            </md-input-container>
+
+            <md-button ng-click="search()">
+                Søg
+            </md-button>
 
             <md-button class="md-icon-button">
             <md-icon>filter_list</md-icon>
             </md-button>
+
+            {{caseid}}
         </div>
     </div>
 </div>
