--- a/app/src/header/view/header.html
+++ b/app/src/header/view/header.html
@@ -1,13 +1,11 @@
 <md-toolbar class="md-tall">
 
-    <od-searchbar></od-searchbar>
-
     <od-settings></od-settings>
 
     <od-user></od-user>
 
     <span class="md-toolbar-tools" flex>
-        <h2>Retspsykologiske erklæringer</h2>
+        <h2 ui-sref="declaration">Retspsykologiske erklæringer</h2>
     </span>
     <span class="md-toolbar-tools" layout="row">
         <ui-view name="toolbar-label"></ui-view>
