--- a/app/src/odSettings/view/settings.html
+++ b/app/src/odSettings/view/settings.html
@@ -2,13 +2,20 @@
 
     <div ng-controller="AuthController as ac">
         
-        <button
+        <!--<button
             ng-if="ac.getUserInfo().user.capabilities.isAdmin"
             class="od-btn od-settings--toggle" 
             title="Indstillinger"
             ui-sref="administration.systemsettings">
             <i class="material-icons">settings</i>
-        </button>
+        </button>-->
+        <md-button 
+            ng-if="ac.getUserInfo().user.capabilities.isAdmin" 
+            class="od-btn md-icon-button od-settings--toggle" 
+            title="Indstillinger" 
+            ui-sref="administration.systemsettings">
+            <md-icon>settings</md-icon>
+        </md-button>
     </div>
 
 </section>
