changed icons and case title, aded no documents info box

--- a/app/src/declaration/view/declaration.html
+++ b/app/src/declaration/view/declaration.html
@@ -1,10 +1,10 @@
 <div layout="row">
     <md-sidenav class="md-sidenav-left sidenav-fixed" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
         <md-button class="md-text-icon-button" aria-label="edit" ng-click="viewPatientData()">
-            <md-icon>content_paste</md-icon> Patient data
+            <md-icon>assignment</md-icon> Patient data
         </md-button>
         <md-button class="md-text-icon-button" aria-label="edit" ng-click="viewDocuments()">
-            <md-icon>library_books</md-icon> Dokumenter
+            <md-icon>insert_drive_file</md-icon> Dokumenter
         </md-button>
     </md-sidenav>
 
