--- a/app/src/declaration/view/document-toolbar.html
+++ b/app/src/declaration/view/document-toolbar.html
@@ -2,7 +2,7 @@
     <md-button class="md-icon-button" aria-label="edit">
         <md-icon>remove_red_eye</md-icon>
     </md-button>
-    <md-button class="md-icon-button" aria-label="edit">
+    <md-button class="md-icon-button" aria-label="edit" ng-click="deleteDocumentsDialog($event)">
         <md-icon>delete</md-icon>
     </md-button>
 </span>
