--- a/app/src/sites/view/uploadDocuments.tmpl.html
+++ b/app/src/sites/view/uploadDocuments.tmpl.html
@@ -1,4 +1,4 @@
-<md-dialog aria-label="upload-files" ng-cloak>
+<md-dialog aria-label="upload-files">
 
     <md-toolbar>
         <div class="md-toolbar-tools">
