--- a/app/src/declaration/view/documents.html
+++ b/app/src/declaration/view/documents.html
@@ -1,6 +1,6 @@
 <div layout="row" layout-wrap ng-repeat="content in contents" ng-if="!tableView">
     <md-card ng-repeat="c in content" flex-gt-sm="15" flex='45'>
-        <md-checkbox class="document-checkbox" aria-label="Checkbox {{c.shortRef}}" ng-click="selectedFile(c)"></md-checkbox>
+        <md-checkbox class="document-checkbox" aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox>
         <span ng-click="!isEditing ? viewFile(c) : null">
             <img ng-src="https://placehold.it/190" class="md-card-image">
             <md-card-content class="document-filename">
@@ -24,7 +24,7 @@
                 </thead>
                 <tbody md-body ng-repeat="content in contents">
                     <tr md-row md-select="dessert" md-select-id="name" md-auto-select ng-repeat="c in content">
-                        <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-click="selectedFile(c)"></md-checkbox></td>
+                        <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
                         <td md-cell>{{c.name}}</td>
                         <td md-cell>{{c.lastChanged | customDate}}</td>
                         <td md-cell>{{c.lastChangedBy}}</td>
