--- a/app/src/header/view/header.html
+++ b/app/src/header/view/header.html
@@ -8,8 +8,8 @@
         <h2 ui-sref="declaration">Retspsykologiske erklæringer</h2>
     </span>
     <span class="md-toolbar-tools" layout="row">
-        <ui-view name="toolbar-label"></ui-view>
+        <ui-view name="toolbar-tools-left"></ui-view>
         <span flex></span>
-        <ui-view name="toolbar-tools"></ui-view>
+        <ui-view name="toolbar-tools-right"></ui-view>
     </span>
 </md-toolbar>
